--- a/app/views/templates/app.twig
+++ b/app/views/templates/app.twig
@@ -10,7 +10,7 @@
 </head>
 <body>
     {% include 'templates/partials/navigation.twig' %}
-    <div class="container">
+    <div class="container-fluid">
         {% include 'templates/partials/flash.twig' %}
         {% block content %}
 
