--- a/app/views/calendrier.twig
+++ b/app/views/calendrier.twig
@@ -6,11 +6,19 @@
         {% if auth.check %}
             <div class="card">
               <div class="card-body">
-                <form id="getCalendar"  name="getCalendar" method="post" action="{{ path_for('calendar.update') }}">
-                    nb semaines : {{calendrier.getWeeks()}}
+                    <div class="col-lg-10 col-sm-12 offset-lg-1">
+                        <div class="d-flex flex-row align-items-center justify-content-between col-sm3">
+                        {# nb semaines : {{calendrier.getWeeks()}} #}
+                            <h2 class="mb-4 text-center card-title">{{ user.getFullNom() }} : {{ calendrier.toString() }}</h2>
+                            <div>
+                                <a href="{{  path_for('calendar.general', { 'month': calendrier.previousMonth().month , 'year': calendrier.previousMonth().year})  }}" class="btn btn-primary" >&lt;</a>
+                                <a href="{{  path_for('calendar.general', { 'month': calendrier.nextMonth().month , 'year': calendrier.nextMonth().year})  }}" class="btn btn-primary" >&gt;</a>
+                            </div>
+                        </div>
+                    </div>
+                <form id="getCalendar" name="getCalendar" method="post" action="{{ path_for('calendar.update') }}">
                     <div class="calendrier col-lg-10 col-sm-12 offset-lg-1 mh-75 {{ 'nb_weeks_' ~ calendrier.getWeeks() }}">
                         <header>
-                            <h2 class="mb-4 text-center">Calendrier de {{ user.nom }} {{ user.prenom }} : {{ calendrier.toString() }}</h2>
                             <div class="row d-none d-sm-flex p-1 bg-dark text-white">
                                 {% for k, day in calendrier.days %}
                                 <h3 class="col-sm p-1 text-center">{{ day }}</h3>
@@ -30,18 +38,30 @@
                                       </h5>
                                       {# <p> s{{ loop.parent.w  }} - d{{k}}</p> #}
                                         {% if calendrier.withinMonth(date) %}
-                                            {% if (user_events[date|date("Ymd")] is defined) %}
-                                                <a class="event d-block p-1 pl-2 pr-2 mb-1 rounded text-truncate small bg-info text-white" title="Test Event 1">
+                                           {#  {% if (user_events[date|date("Ymd")] is defined) %} #}
+                                                {# <a class="event d-block p-1 pl-2 pr-2 mb-1 rounded text-truncate small bg-info text-white align-middle" title="Test Event 1">
                                                     <span class="badge badge-light">{{user_events[date|date("Ymd")].user_initiales}}</span>
                                                     {{user_events[date|date("Ymd")].translated_eventType}}
-                                                    <select name="sj{{ date|date("d") }}" id="sj{{ date|date("Ymd") }}" class="type_event form-control form-control-sm">
-                                                        <option value=""></option>
-                                                        {% for l,type in liste_type_event %}
-                                                        <option value="{{ l }}" {% if l is same as(user_events[date|date("Ymd")].eventType_id) %} selected="selected" {% endif %}> {{ type.titre }}</option>
-                                                        {% endfor %}
+                                                </a> #}
+                                                <div class="input-group input-group-sm">
+                                                    <div class="input-group-prepend">
+                                                        <span class="input-group-text"><span class="badge badge-light">{{user.macaron()}}</span></span>
+                                                    </div>
+                                                    <select name="sj{{ date|date("d") }}" id="sj{{ date|date("Ymd") }}" class="type_event form-control form-control-sm {% if (user_events[date|date("Ymd")] is defined) %}is-valid{% endif %}">
+                                                            <option value=""></option>
+                                                            {% for l,type in liste_type_event %}
+                                                            <option value="{{ l }}" {% if l is same as(user_events[date|date("Ymd")].eventType_id) %} selected="selected" {% endif %}> {{ type.titre }}</option>
+                                                            {% endfor %}
                                                     </select>
-                                                </a>
-                                            {% else %}
+
+                                                    <div class="input-group-append align-middle ">
+                                                        <div class="input-group-text {% if user_events[date|date("Ymd")].voiture %} checked-success {% endif %}">
+                                                            <label for="voiture_sj{{ date|date("d") }}" class="mb-0" ><i class="mr-1 fas fa-car "></i></label>
+                                                            <input class="opt_voiture checkbox" type="checkbox" id="voiture_sj{{ date|date("d") }}" name="voiture_sj{{ date|date("d") }}" aria-label="Checkbox voiture" {% if user_events[date|date("Ymd")].voiture %} checked="checked" {% endif %}/>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            {# {% else %}
                                                 <select name="sj{{ date|date("d") }}" id="sj{{ date|date("Ymd") }}" class="type_event form-control form-control-sm">
                                                     <option value=""></option>
                                                     {% for l,type in liste_type_event %}
@@ -49,7 +69,7 @@
                                                     {% endfor %}
                                                 </select>
                                                 <p class="d-sm-none">No events</p>
-                                            {% endif %}
+                                            {% endif %} #}
                                         {% endif %}
                                     </div>
                                 {% endfor %}
@@ -70,6 +90,80 @@
         {% endif %}
 
        {#  <pre>{{dump(liste_type_event)}}</pre> #}
-         <pre>{{dump(user_events)}}</pre>
+         {# <pre>{{dump(user_events)}}</pre>
+          #}
+          <pre>{{ dump(data)}}</pre>
     </div>
+
+    <script>
+
+    $(document).ready(function()
+    {
+        $(".opt_voiture.checkbox").on("change", function()
+        {
+            var checked = $(this).prop("checked");
+
+            $(this).closest(".input-group-append").find(".input-group-text").toggleClass('checked-success');
+            if(($(this).is(":checked")) && (!$(this).closest('.input-group').find('select.type_event').val())){
+                //.prop("checked", checked);
+                $(this).closest('.input-group').find('select.type_event').attr('required',"required");
+            }
+            if((!$(this).is(":checked")) && (!$(this).closest('.input-group').find('select.type_event').val())){
+                //.prop("checked", checked);
+                $(this).closest('.input-group').find('select.type_event').attr('required', false);
+            }
+        });
+
+        $("select.type_event").each(function(){
+
+            var selected = $(this).val();
+            if(selected){
+                console.log($(this).attr('id') + " : " + selected);
+            }
+
+            $(this).on("change", function(){
+                var newselected = $(this).val();
+                console.log($(this).attr('id') + ": "+ selected + " -> " + newselected);
+
+                if(newselected == selected) {
+                    if(selected){
+                        $(this).addClass('is-valid');
+                        $(this).removeClass('is-changing is-invalid');
+                    } else {
+                        $(this).removeClass('is-valid is-changing is-invalid');
+                    }
+                }
+                else {
+                    $(this).addClass('is-changing');
+                    $(this).removeClass('is-valid is-invalid');
+                    if(!newselected){
+                        $(this).addClass('is-invalid');
+                        $(this).removeClass('is-valid is-changing');
+                        $(this).closest(".input-group").find(".input-group-text").toggleClass('checked-success').find('.opt_voiture.checkbox').prop("checked", false);
+                    }
+                    //$(this).toggleClass('is-valid is-invalid');
+                }
+            });
+        });
+
+        $('form#ge tCalendar').submit(function (e) {
+            // prevent the page from submitting like normal
+            e.preventDefault();
+
+            $.ajax({
+                url: '{{ path_for('calendar.update') }}',
+                type: 'POST',
+                data: $(this).serialize(),
+                success: function (response) {
+                    console.log('it worked!'+ response);
+                },
+                error: function(xhr, status, error) {
+                    var err = xhr.responseText;
+                    console.log('it failed!\n'+ err.Message);
+                }
+            });
+        });
+
+    });
+    </script>
 {% endblock %}
