--- a/app/views/home.twig
+++ b/app/views/home.twig
@@ -1,46 +1,47 @@
 {% extends 'templates/app.twig' %}
-
 {% block content %}
+
     <div class="content">
         {% if auth.check %}
-
+        <div class="col-lg-8 col-sm-12 offset-lg-2">
             <div class="card">
               <div class="card-body">
-                <h2 class="card-title">Bonjour {{ auth.user.nom }} {{ auth.user.prenom }} </h2>
-                <p class="card-text">A partir de cet espace vous pouvez : </p>
-                 <div class="list-group list-group-flush">
-                    <a class="list-group-item list-group-item-action" href="{{ path_for('auth.password.change') }}">Changer vos informations et Password</a>
-                    <a class="list-group-item list-group-item-action" href="{{ path_for('auth.signup') }}">Inscrire un nouveau membre</a>
-                    <div class="list-group-item list-group-item-action" href="#">
+                <h2 class="card-title">Bonjour {{ user.nom }} {{ user.prenom }} </h2>
+                    <p class="card-text">A partir de cet espace vous pouvez : </p>
+                     <div class="list-group list-group-flush">
+                        <a class="list-group-item list-group-item-action" href="{{ path_for('auth.password.change') }}">Changer vos informations et Password</a>
+                        <a class="list-group-item list-group-item-action" href="{{ path_for('auth.signup') }}">Inscrire un nouveau membre</a>
+                        <div class="list-group-item list-group-item-action" href="#">
 
 
-                            <form id="getCalendar"   name="getCalendar" method="post" action="{{ path_for('calendar.general') }}">
-                                <div class="form-row">
-                                    <div class="form-group col-md-6"><label>Mettre à jour votre calendrier</label></div>
-                                    <div class="form-group col-md-2">
+                                <form id="getCalendar"   name="getCalendar" method="post" action="{{ path_for('calendar.general') }}">
+                                    <div class="form-row">
+                                        <div class="form-group col-md-6"><label>Mettre à jour votre calendrier</label></div>
+                                        <div class="form-group col-md-2">
 
-                                        <select name="selMois" id="selMois" class="form-control form-control-sm ">
-                                            {% for key,mois in form_calendar.month_listing %}
-                                            <option value="{{ key }}" {% if key is same as(form_calendar.current_month) %} selected="selected" {% endif %}> {{ mois }}</option>
-                                            {% endfor %}
-                                        </select>
+                                            <select name="selMois" id="selMois" class="form-control form-control-sm ">
+                                                {% for key,mois in form_calendar.month_listing %}
+                                                <option value="{{ key }}" {% if key is same as(form_calendar.current_month) %} selected="selected" {% endif %}> {{ mois }}</option>
+                                                {% endfor %}
+                                            </select>
+                                        </div>
+                                       <div class="form-group col-md-2">
+                                            <select name="selAnnee" id="selAnnee" class="form-control  form-control-sm">
+                                                {% for key,annee in form_calendar.year_listing %}
+                                                <option value="{{ key }}" {% if key is same as(form_calendar.current_year) %} selected="selected" {% endif %}> {{ annee }}</option>
+                                                {% endfor %}
+                                            </select>
+                                        </div>
+                                        <div class="form-group col-md-2">
+                                            <button class="btn btn-dark btn-sm" type="submit">Mettre à jour</button>
+                                        </div>
                                     </div>
-                                   <div class="form-group col-md-2">
-                                        <select name="selAnnee" id="selAnnee" class="form-control  form-control-sm">
-                                            {% for key,annee in form_calendar.year_listing %}
-                                            <option value="{{ key }}" {% if key is same as(form_calendar.current_year) %} selected="selected" {% endif %}> {{ annee }}</option>
-                                            {% endfor %}
-                                        </select>
-                                    </div>
-                                    <div class="form-group col-md-2">
-                                        <button class="btn btn-dark btn-sm" type="submit">Mettre à jour</button>
-                                    </div>
-                                </div>
-                                {{ csrf.field | raw }}
-                           </form>
+                                    {{ csrf.field | raw }}
+                               </form>
+                        </div>
+                        <a class="list-group-item list-group-item-action" href="#">Voir le calendrier Global</a>
+                        <button type="button" class="list-group-item list-group-item-action list-group-item-danger" disabled action="{{ path_for('user.detroy') }}{{auth.user.id}}"><i class="fas fa-trash"></i> Supprimer ce compte</button>
                     </div>
-                    <a class="list-group-item list-group-item-action" href="#">Voir le calendrier Global</a>
-                    <button type="button" class="list-group-item list-group-item-action list-group-item-danger" disabled action="{{ path_for('user.detroy') }}{{auth.user.id}}"><i class="fas fa-trash"></i> Supprimer ce compte</button>
                 </div>
               </div>
             </div>
