--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -40,6 +40,27 @@ nav a.delete_account:hover {
     color: #c7c7c7!important;
 }
 
+.user_macaron {
+    display: inline-block;
+    font-size: 0.8em;
+    width: 2.5em;
+    height: 2.5em;
+    padding: 0;
+    line-height: 2.4em;
+    text-align: center;
+    border-radius: 50%;
+    background: #222;
+    vertical-align: middle;
+    margin-right: 0.5em;
+    color: white;
+  }
+
+.checked-success label i.fas {color: #4a9ef9;}
+
+.calendrier .form-control.is-changing {
+    border-color: #ffc107!important;
+}
+
 
 @media (max-width:575px) {
 
