--- a/app/views/auth/signup.twig
+++ b/app/views/auth/signup.twig
@@ -2,35 +2,63 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <div class="panel panel-default">
-                <div class="panel-heading">Sign Up</div>
-                <div class="panel-body">
-                    <form action="{{ path_for('auth.signup') }}" method="post">
-                        <div class="form-group{{ errors.email ? ' has-error' : '' }}">
-                            <label for="email">Email</label>
-                            <input type="email" name="email" id="email" placeholder="email@domaine.com" class="form-control" value="{{ old.email }}">
-                            {% if errors.email %}
-                            <span class="hel-block">{{ errors.email | first }}</span>
-                            {% endif %}
+        <div class="col-lg-6 col-sm-12 offset-lg-3">
+            <div class="card ">
+                <div class="card-body">
+                    <div class="card-title"><h2 class="text-center display-4">Inscription</h2></div>
+                    <form action="{{ path_for('auth.signup') }}" method="post" class="needs-validation">
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <div class="input-group  {{ errors.validated.email ? 'was-validated' : '' }}">
+                                        <div class="input-group-prepend">
+                                         <label for="email" class="sr-only">Email</label>
+                                          <span class="input-group-text" id="email">@</span>
+                                        </div>
+                                        <input type="email" name="email" id="email" placeholder="email@domaine.com" class="form-control {{ errors.email ? ' is-invalid' : '' }}" value="{{ old.email }}">
+                                        {% if errors.email %}<span class="invalid-feedback">{{ errors.email | first }}</span>{% endif %}
+                                        {% if errors.validated.email %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <div class="input-group  {{ errors.validated.password ? 'was-validated' : '' }}">
+                                         <label for="password" class="sr-only">Password</label>
+                                         <div class="input-group-prepend">
+                                              <span class="input-group-text" id="password"><i class="fas fa-key"></i></span>
+                                            </div>
+                                        <input type="password" name="password" id="password" placeholder="xxxxxxx" class="form-control {{ errors.password ? ' is-invalid' : '' }}">
+                                        {% if errors.password %}<span class="invalid-feedback">{{ errors.password | first }}</span>{% endif %}
+                                        {% if errors.validated.password %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-
-                        <div class="form-group{{ errors.nom ? ' has-error' : '' }}">
-                            <label for="nom">Nom</label>
-                            <input type="text" name="nom" id="nom" class="form-control" value="{{ old.nom }}" >
-                            {% if errors.nom %}
-                            <span class="hel-block">{{ errors.nom | first }}</span>
-                            {% endif %}
+                        <hr />
+                        <div class="form-group row">
+                            <div class="input-group  {{ errors.validated.nom ? 'was-validated' : '' }}">
+                                <label for="nom" class="col-sm-2 col-form-label text-right">Nom</label>
+                                <div class="col-sm-10">
+                                    <input type="text" name="nom" id="nom" class="form-control {{ errors.nom ? ' is-invalid' : '' }}" value="{{ old.nom }}" >
+                                    {% if errors.nom %}<span class="invalid-feedback">{{ errors.nom | first }}</span>{% endif %}
+                                    {% if errors.validated.nom %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
+                                </div>
+                            </div>
                         </div>
-
-                        <div class="form-group{{ errors.password ? ' has-error' : '' }}">
-                            <label for="password">Password</label>
-                            <input type="password" name="password" id="password" class="form-control">
-                            {% if errors.password %}
-                            <span class="hel-block">{{ errors.password | first }}</span>
-                            {% endif %}
+                        <div class="form-group row">
+                            <div class="input-group  {{ errors.validated.prenom ? 'was-validated' : '' }}">
+                                <label for="prenom" class="col-sm-2 col-form-label text-right">Nom</label>
+                                <div class="col-sm-10">
+                                    <input type="text" name="prenom" id="prenom" class="form-control {{ errors.prenom ? ' is-invalid' : '' }}" value="{{ old.prenom }}" >
+                                    {% if errors.prenom %}<span class="invalid-feedback">{{ errors.prenom | first }}</span>{% endif %}
+                                    {% if errors.validated.prenom %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
+                                </div>
+                            </div>
                         </div>
-                        <button type="submit" class="btn btn-default">Sign Up</button>
+                        <div class="text-right">
+                            <button type="submit" class="btn btn-default align-right">Enregistrer</button>
+                        </div>
 
                         {{ csrf.field | raw }}
                     </form>
