--- a/app/views/home.twig
+++ b/app/views/home.twig
@@ -70,7 +70,7 @@
                                     {% endif %}
                                 </div>
                                 <button type="submit" class="btn btn-default">Sign In</button>
-
+                                {{ pwd }}
                                 {{ csrf.field | raw }}
                             </form>
                         </div>
