--- a/app/views/templates/partials/flash.twig
+++ b/app/views/templates/partials/flash.twig
@@ -1,7 +1,7 @@
 
 {% if flash.getMessage('info') %}
   <div class="alert alert-info alert-dismissible fade show" role="alert">
-    {{ flash.getMessage('info') | first }}
+    {{ flash.getMessage('info') | first |raw }}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -10,7 +10,7 @@
 
 {% if flash.getMessage('error') %}
   <div class="alert alert-danger alert-dismissible fade show" role="alert">
-    {{ flash.getMessage('error') | first }}
+    {{ flash.getMessage('error') | first |raw }}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -19,7 +19,7 @@
 
 {% if flash.getMessage('warning') %}
   <div class="alert alert-warning alert-dismissible fade show" role="alert">
-    {{ flash.getMessage('warning') | first }}
+    {{ flash.getMessage('warning') | first |raw }}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -28,7 +28,7 @@
 
 {% if flash.getMessage('success') %}
   <div class="alert alert-success alert-dismissible fade show" role="alert">
-    {{ flash.getMessage('success') | first }}
+    {{ flash.getMessage('success') | first |raw }}
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
