--- a/app/views/calendar/flatcal.twig
+++ b/app/views/calendar/flatcal.twig
@@ -9,14 +9,36 @@
                     <div class="col-lg-10 col-sm-12 offset-lg-1">
                         <div class="d-flex flex-row align-items-center justify-content-between col-sm3">
                         {# nb semaines : {{calendrier.getWeeks()}} #}
-                            <h2 class="mb-4 text-center card-title">{{ user.getFullNom() }} : {{ calendrier.toString() }}</h2>
+                            <h2 class="mb-4 text-center card-title">Calendrier Global : {{ calendrier.toString() }} </h2>
                             <div class="navigation">
-                                <a href="{{  path_for('calendar.general', { 'month': calendrier.previousMonth().month , 'year': calendrier.previousMonth().year})  }}" class="btn btn-primary" >&lt;</a>
-                                <a href="{{  path_for('calendar.general', { 'month': calendrier.nextMonth().month , 'year': calendrier.nextMonth().year})  }}" class="btn btn-primary" >&gt;</a>
+                                <a href="{{  path_for('calendar.forall', { 'month': calendrier.previousMonth().month , 'year': calendrier.previousMonth().year})  }}" class="btn btn-primary" >&lt;</a>
+                                <a href="{{  path_for('calendar.forall', { 'month': calendrier.nextMonth().month , 'year': calendrier.nextMonth().year})  }}" class="btn btn-primary" >&gt;</a>
                             </div>
                         </div>
                     </div>
-                <form id="getCalendar" name="getCalendar" method="post" action="{{ path_for('calendar.update') }}">
+
+
+                    <div class="calendrier col-lg-10 col-sm-12 offset-lg-1 mh-75 {{ 'nb_weeks_' ~ calendrier.getWeeks() }}">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-bordered table-hover table-sm ">
+                                <caption>Listes des utilisateurs</caption>
+                                <thead class="thead-dark">
+                                <th><span class="d-block p-1 text-center text-muted">#Nom</span></th>
+                                 {% for w, week in 0..calendrier.getWeeks()-1 %}
+                                    {% for k, day in calendrier.days %}
+                                        {% set date = calendrier.getday(loop.parent.w,k) %}
+                                            {% if calendrier.withinMonth(date) %}
+                                                <th><span class="d-block p-1 text-center text-muted">{{ day|first|upper }}</span><span class="d-block p-1 text-center ">{{ date|date("d") }}</span></th>
+                                            {% endif %}
+                                    {% endfor %}
+                                {% endfor %}
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
                     <div class="calendrier col-lg-10 col-sm-12 offset-lg-1 mh-75 {{ 'nb_weeks_' ~ calendrier.getWeeks() }}">
                         <header>
                             <div class="row d-none d-sm-flex p-1 bg-dark text-white">
@@ -43,7 +65,7 @@
                                                     <span class="badge badge-light">{{user_events[date|date("Ymd")].user_initiales}}</span>
                                                     {{user_events[date|date("Ymd")].translated_eventType}}
                                                 </a> #}
-                                                <div class="input-group input-group-sm">
+                                               {#  <div class="input-group input-group-sm">
                                                     <div class="input-group-prepend">
                                                         <span class="input-group-text"><span class="badge badge-light">{{user.macaron()}}</span></span>
                                                     </div>
@@ -60,7 +82,7 @@
                                                             <input class="opt_voiture checkbox" type="checkbox" id="voiture_sj{{ date|date("d") }}" name="voiture_sj{{ date|date("d") }}" aria-label="Checkbox voiture" {% if user_events[date|date("Ymd")].voiture %} checked="checked" {% endif %}/>
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </div> #}
                                             {# {% else %}
                                                 <select name="sj{{ date|date("d") }}" id="sj{{ date|date("Ymd") }}" class="type_event form-control form-control-sm">
                                                     <option value=""></option>
@@ -76,16 +98,8 @@
                                 <div class="w-100"></div>
                             {% endfor %}
                         </div>
-                        <div class="row mt-2">
-                            <div class="col-lg-12">
-                                <button class="btn btn-dark btn-sm float-right" type="submit">Mettre à jour</button>
-                            </div>
-                        </div>
+
                     </div>
-                    {{ csrf.field | raw }}
-                    <input type="hidden" name="selMois" id="selMois" value="{{ calendrier.month }}">
-                    <input type="hidden" name="selAnnee" id="selAnnee" value="{{ calendrier.year }}">
-                </form>
               </div>
             </div>
 
@@ -102,10 +116,10 @@
     <script>
     $(document).ready(function()
     {
+       /*
         $(".opt_voiture.checkbox").on("change", function()
         {
-            var checked = $(this).prop("checked");
-
+            $(this).closest(".input-group-append").find(".input-group-text").toggleClass('checked-success');
             check_verif($(this));
         });
 
@@ -136,50 +150,67 @@
                     if(!newselected){
                         $(this).addClass('is-invalid');
                         $(this).removeClass('is-valid is-changing');
-                        $(this).closest(".input-group").find(".input-group-text").toggleClass('checked-success').find('.opt_voiture.checkbox').prop("checked", false);
+                        $(this).closest(".input-group").find(".input-group-text").removeClass('checked-success').find('.opt_voiture.checkbox').prop("checked", false);
                     }
                     //$(this).toggleClass('is-valid is-invalid');
                 }
             });
         });
 
-        // UPSATE du calendrier en Ajax si on navigue sans avori submit :)
+        // UPDATE du calendrier en Ajax si on navigue sans submit :)
         $(".navigation a").on("click", function(e){
             e.preventDefault();
             e.stopPropagation();
             var href = $(this).attr("href");
+            var checkVal = new Array();
 
-
-            $.ajax({
-                url: "{{ path_for('calendar.update') }}",
-                type: 'POST',
-                data: $('form#getCalendar').serialize(),
-                success: function (response) {
-                    console.log('it worked!'+ response );
-                    window.location.href = href;
-                },
-                error: function(xhr, status, error) {
-                    var err = xhr.responseText;
-                    console.log('it failed!\n'+ err.Message);
+            $('.input-group').find('select.type_event').each(function () {
+                var selId = $(this).attr('id');
+                if(($(this).prop('required')) && (!$(this).val()))
+                {
+                    //console.log("error field " + selId);
+                    checkVal.push(selId);
                 }
-            });
-        });
+            })
 
+            if(!$('#getCalendar')[0].checkValidity()) {
+                console.log('errors checkValidity()');
+                console.log(checkVal);
+                $('#getCalendar').find(':submit').click(); //histoire de faire remonter la non conformité du form
+                //console.log('submit calendar :' + $('#getCalendar')[0].checkValidity());
+            }
+            else
+            {
+                $.ajax({
+                    url: "{{ path_for('calendar.update') }}",
+                    type: 'POST',
+                    data: $('form#getCalendar').serialize(),
+                    success: function (response) {
+                        console.log('it worked!'+ response );
+                        window.location.href = href;
+                    },
+                    error: function(xhr, status, error) {
+                        var err = xhr.responseText;
+                        console.log('it failed!\n'+ err.Message);
+                    }
+               });
+            }
+        });
+        */
 
     });
 
     function check_verif(cb) {
-        cb.closest(".input-group-append").find(".input-group-text").toggleClass('checked-success');
         if((cb.is(":checked")) && (!cb.closest('.input-group').find('select.type_event').val())){
             //.prop("checked", checked);
             cb.closest('.input-group').find('select.type_event').attr('required',"required");
-            return false;
+
         }
         if((!cb.is(":checked")) && (!cb.closest('.input-group').find('select.type_event').val())){
             //.prop("checked", checked);
             cb.closest('.input-group').find('select.type_event').attr('required', false);
+            cb.removeClass('checked-success');
         }
-        return true;
     };
     </script>
 {% endblock %}
