--- a/app/views/templates/app.twig
+++ b/app/views/templates/app.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>{{ application.name }} {{ application.version  }}</title>
@@ -22,6 +22,10 @@
 
     </div>
 
-
+<script>
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+})
+</script>
 </body>
 </html>
