--- a/app/views/auth/card/change_infos.twig
+++ b/app/views/auth/card/change_infos.twig
@@ -5,34 +5,21 @@
         <div class="col-lg-6 col-sm-12 offset-lg-3">
             <div class="card ">
                 <div class="card-body">
-                    <div class="card-title"><h2 class="text-center display-4 mb-4">Inscription</h2></div>
-                    <form action="{{ path_for('auth.signup') }}" method="post" class="needs-validation">
+                    <div class="card-title"><h2 class="text-center display-4 mb-4">Modification de mes informations</h2></div>
+                    <p class="lead"><span class="font-weight-bold">Compte : </span><span class="badge badge-info">{{ auth.user.email }}</span></p>
+                    <form action="{{ path_for('auth.infos.change') }}" method="post" class="needs-validation">
                         <div class="row">
                             <div class="col">
-                                <div class="form-group">
+                                <div class="form-group" >
                                          <label for="email" class="">Email <span class="text-danger">*</span></label>
                                     <div class="input-group  {{ errors.validated.email ? 'was-validated' : '' }}">
                                         <div class="input-group-prepend">
                                           <span class="input-group-text" id="email">@</span>
                                         </div>
-                                        <input type="email" name="email" id="email" placeholder="email@domaine.com" class="form-control {{ errors.email ? ' is-invalid' : '' }}" value="{{ old.email }}">
+                                        <input disabled type="email" name="email" id="email" placeholder="email@domaine.com" class="form-control {{ errors.email ? ' is-invalid' : '' }}" value="{{ auth.user.email }}">
 
                                         {% if errors.email %}<span class="invalid-feedback">{{ errors.email | first }}</span>{% endif %}
                                         {% if errors.validated.email %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="form-group">
-                                         <label for="password" class="">Password <span class="text-danger">*</span></label>
-                                    <div class="input-group  {{ errors.validated.password ? 'was-validated' : '' }}">
-                                         <div class="input-group-prepend">
-                                              <span class="input-group-text" id="password"><i class="fas fa-key"></i></span>
-                                            </div>
-                                        <input type="password" name="password" id="password" placeholder="xxxxxxx" class="form-control {{ errors.password ? ' is-invalid' : '' }}" value="{{ old.password }}">
-
-                                        {% if errors.password %}<span class="invalid-feedback">{{ errors.password | first }}</span>{% endif %}
-                                        {% if errors.validated.password %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -44,7 +31,7 @@
                                     <div class="input-group  {{ errors.validated.nom ? 'was-validated' : '' }}">
                                         <label for="nom" class="col-sm-2 d-sm-none d-md-inline col-form-label text-right">Nom <span class="text-danger">*</span></label>
                                         <div class="col-sm-12 col-md-10">
-                                            <input type="text" name="nom" id="nom" placeholder="Nom" class="form-control {{ errors.nom ? ' is-invalid' : '' }}" value="{{ old.nom }}"  >
+                                            <input type="text" name="nom" id="nom" placeholder="Nom" class="form-control {{ errors.nom ? ' is-invalid' : '' }}" value="{{ old.nom ? old.nom : auth.user.nom }}"  >
 
                                             {% if errors.nom %}<span class="invalid-feedback">{{ errors.nom | first }}</span>{% endif %}
                                             {% if errors.validated.nom %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
@@ -55,7 +42,7 @@
                                     <div class="input-group  {{ errors.validated.prenom ? 'was-validated' : '' }}">
                                         <label for="prenom" class="col-sm-2 d-sm-none d-md-inline col-form-label text-right">Prénom <span class="text-danger">*</span></label>
                                         <div class="col-sm-12 col-md-10">
-                                            <input type="text" name="prenom" id="prenom" placeholder="Prénom" class="form-control {{ errors.prenom ? ' is-invalid' : '' }}" value="{{ old.prenom }}"  >
+                                            <input type="text" name="prenom" id="prenom" placeholder="Prénom" class="form-control {{ errors.prenom ? ' is-invalid' : '' }}" value="{{ old.prenom ? old.prenom : auth.user.prenom }}"  >
 
                                             {% if errors.prenom %}<span class="invalid-feedback">{{ errors.prenom | first }}</span>{% endif %}
                                             {% if errors.validated.prenom %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
@@ -66,9 +53,9 @@
                             </div>
                             <div class="col col-2">
                                     <div class="form-group ">
-                                        <label for="color" class="col-form-label" title="Couleur" data-toggle="tooltip" data-placement="top" style="color:{{ old.color  ? old.color : "#454870"}}">Couleur <i  class="align-middle fas fa-address-card fa-3x"></i></label>
+                                        <label for="color" class="col-form-label" title="Couleur" data-toggle="tooltip" data-placement="top" style="color:{{ old.color ? old.color : auth.user.color}}">Couleur <i  class="align-middle fas fa-address-card fa-3x"></i></label>
                                     <div class="input-group input-group-sm {{ errors.validated.color ? 'was-validated' : '' }}">
-                                        <input type="color" name="color" id="color" class="sr-only form-control  {{ errors.color ? ' is-invalid' : '' }}"  value="{{ old.color  ? old.color : "#454870"}}">
+                                        <input type="color" name="color" id="color" class="sr-only form-control  {{ errors.color ? ' is-invalid' : '' }}"  value="{{ old.color ? old.color : auth.user.color }}">
                                         {% if errors.color %}<span class="invalid-feedback">{{ errors.color | first }}</span>{% endif %}
                                         {% if errors.validated.color %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
                                     </div>
@@ -88,7 +75,7 @@
                                 <div class="form-group  {{ errors.validated.ville ? 'was-validated' : '' }}">
                                     <label for="ville" class="col-form-label"><i class="fas fa-map-marker-alt"></i> Ville <span class="text-danger">*</span></label>
                                     <div>
-                                        <input type="text" name="ville" id="ville" class="form-control {{ errors.ville ? ' is-invalid' : '' }}" value="{{ old.ville }}"  >
+                                        <input type="text" name="ville" id="ville" class="form-control {{ errors.ville ? ' is-invalid' : '' }}" value="{{ old.ville ? old.ville : auth.user.ville }}"  >
 
                                         {% if errors.ville %}<span class="invalid-feedback">{{ errors.ville | first }}</span>{% endif %}
                                         {% if errors.validated.ville %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
@@ -99,7 +86,7 @@
                                 <div class="form-group  {{ errors.validated.service ? 'was-validated' : '' }}">
                                     <label for="service" class="col-form-label"><i class="fas fa-id-badge"></i> Service</label>
                                     <div>
-                                        <input type="text" name="service" id="service" class="form-control {{ errors.service ? ' is-invalid' : '' }}" value="{{ old.service }}" >
+                                        <input type="text" name="service" id="service" class="form-control {{ errors.service ? ' is-invalid' : '' }}" value="{{ old.service ? old.service : auth.user.service }}" >
                                         {% if errors.service %}<span class="invalid-feedback">{{ errors.service | first }}</span>{% endif %}
                                         {% if errors.validated.service %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
                                     </div>
@@ -111,7 +98,7 @@
                                 <div class="form-group  {{ (errors.validated.tel) and (old.tel != "" ) ? 'was-validated' : '' }}">
                                     <label for="tel" class="col-form-label"><i class="fas fa-phone"></i> tel</label>
                                     <div>
-                                        <input type="text" name="tel" id="tel" placeholder="ex : 04XXXXXXXX" class="form-control {{ errors.tel ? ' is-invalid' : '' }}" value="{{ old.tel }}" >
+                                        <input type="text" name="tel" id="tel" placeholder="ex : 04XXXXXXXX" class="form-control {{ errors.tel ? ' is-invalid' : '' }}" value="{{ old.tel ? old.tel : auth.user.tel }}" >
                                         {% if errors.tel %}<span class="invalid-feedback">{{ errors.tel | first }}</span>{% endif %}
                                         {% if (errors.validated.tel) and (old.tel != "")   %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
                                     </div>
@@ -121,7 +108,7 @@
                                 <div class="form-group  {{ (errors.validated.gsm) and (old.gsm != "" ) ? 'was-validated' : '' }}">
                                     <label for="gsm" class="col-form-label"><i class="fas fa-mobile-alt"></i> Portable</label>
                                     <div>
-                                        <input type="text" name="gsm" id="gsm" placeholder="ex : 06XXXXXXXX" class="form-control {{ errors.gsm ? ' is-invalid' : '' }}" value="{{ old.gsm }}" >
+                                        <input type="text" name="gsm" id="gsm" placeholder="ex : 06XXXXXXXX" class="form-control {{ errors.gsm ? ' is-invalid' : '' }}" value="{{ old.gsm ? old.gsm : auth.user.gsm }}" >
                                         {% if errors.gsm %}<span class="invalid-feedback">{{ errors.gsm | first }}</span>{% endif %}
                                         {% if (errors.validated.gsm) and (old.gsm != "") %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
                                     </div>
