--- a/app/views/auth/password/change.twig
+++ b/app/views/auth/password/change.twig
@@ -1,7 +1,7 @@
 {% extends 'templates/app.twig' %}
 
 {% block content %}
-    <div class="row">
+    {# <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-default">
                 <div class="panel-heading">Change Password</div>
@@ -23,6 +23,49 @@
                         </div>
                         <button type="submit" class="btn btn-default">Change Password</button>
 
+                        {{ csrf.field | raw }}
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div> #}
+    <div class="row">
+        <div class="col-md-6 offset-md-3 mt-4">
+            <div class="card ">
+                <div class="card-body">
+                <div class="card-title">
+                    <h2>Modification du mot de passe</h2>
+                    <p class="lead"><span class="font-weight-bold">Compte : </span><span class="badge badge-info">{{ auth.user.email }}</span></p>
+                    </div>
+                    <form action="{{ path_for('auth.password.change') }}" method="post">
+                        <div class="form-group">
+                            <label for="password_old">Mot de passe actuel :</label>
+                            <div class="input-group{{ errors.validated.password_old ? 'was-validated' : '' }}">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="password_old"><i class="fa fa-key opacity-3"></i></span>
+                                </div>
+                                <input type="password_old" name="password_old" id="password_old" placeholder="xxxxxxx" class="form-control {{ errors.password_old ? ' is-invalid' : '' }}" value="{{ old.password_old }}">
+                                {% if errors.password_old %}<span class="invalid-feedback">{{ errors.password_old | first }}</span>{% endif %}
+                                {% if errors.validated.password_old %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password">Nouveau Mot de passe :</label>
+                            <div class="input-group  {{ errors.validated.password ? 'was-validated' : '' }}">
+                                 <div class="input-group-prepend">
+                                      <span class="input-group-text" id="password"><i class="fas fa-key"></i></span>
+                                    </div>
+                                <input type="password" name="password" id="password" placeholder="xxxxxxx" class="form-control {{ errors.password ? ' is-invalid' : '' }}" value="{{ old.password }}">
+                                {% if errors.password %}<span class="invalid-feedback">{{ errors.password | first }}</span>{% endif %}
+                                {% if errors.validated.password %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
+                            </div>
+                        </div>
+
+
+                        <div class="text-right">
+                            <button type="submit" class="btn btn-default">Changer le mot de passe</button>
+                        </div>
                         {{ csrf.field | raw }}
                     </form>
                 </div>
