--- a/app/views/auth/signin.twig
+++ b/app/views/auth/signin.twig
@@ -2,28 +2,41 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <div class="panel panel-default">
-                <div class="panel-heading">Sign In</div>
-                <div class="panel-body">
+        <div class="col-md-4 offset-md-4 mt-4">
+            <div class="card ">
+                <div class="card-body">
+                <div class="card-title">
+                    <h2>Se connecter</h2>
+                    </div>
                     <form action="{{ path_for('auth.signin') }}" method="post">
-                        <div class="form-group{{ errors.email ? ' has-error' : '' }}">
-                            <label for="email">Email</label>
-                            <input type="email" name="email" id="email" placeholder="you@domain.com" class="form-control" value="{{ old.email }}">
-                            {% if errors.email %}
-                            <span class="hel-block">{{ errors.email | first }}</span>
-                            {% endif %}
+                        <div class="form-group">
+                            <div class="input-group{{ errors.validated.email ? 'was-validated' : '' }}">
+                                <div class="input-group-prepend">
+                                    <label for="email" class="sr-only">Email</label>
+                                    <span class="input-group-text" id="email">@</span>
+                                </div>
+                                <input type="email" name="email" id="email" placeholder="email@domaine.com" class="form-control {{ errors.email ? ' is-invalid' : '' }}" value="{{ old.email }}">
+                                {% if errors.email %}<span class="invalid-feedback">{{ errors.email | first }}</span>{% endif %}
+                                {% if errors.validated.email %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
+                            </div>
                         </div>
 
-                        <div class="form-group{{ errors.password ? ' has-error' : '' }}">
-                            <label for="password">Password</label>
-                            <input type="password" name="password" id="password" class="form-control">
-                            {% if errors.password %}
-                            <span class="hel-block">{{ errors.password | first }}</span>
-                            {% endif %}
+                        <div class="form-group">
+                            <div class="input-group  {{ errors.validated.password ? 'was-validated' : '' }}">
+                                 <label for="password" class="sr-only">Password</label>
+                                 <div class="input-group-prepend">
+                                      <span class="input-group-text" id="password"><i class="fas fa-key"></i></span>
+                                    </div>
+                                <input type="password" name="password" id="password" placeholder="xxxxxxx" class="form-control {{ errors.password ? ' is-invalid' : '' }}">
+                                {% if errors.password %}<span class="invalid-feedback">{{ errors.password | first }}</span>{% endif %}
+                                {% if errors.validated.password %} <span class="valid-feedback">ok <i class="fas fa-check"></i></span>{% endif %}
+                            </div>
                         </div>
-                        <button type="submit" class="btn btn-default">Sign In</button>
 
+
+                        <div class="text-right">
+                            <button type="submit" class="btn btn-default">Valider</button>
+                        </div>
                         {{ csrf.field | raw }}
                     </form>
                 </div>
