--- a/app/views/home.twig
+++ b/app/views/home.twig
@@ -1,19 +1,18 @@
 {% extends 'templates/app.twig' %}
 {% block content %}
-
-    <div class="content">
+    <div class="content {{ _self.templateName|replace({'.twig':'', '/':'_'}) }}">
         {% if auth.check %}
         <div class="col-lg-8 col-sm-12 offset-lg-2">
             <div class="card">
               <div class="card-body">
-                <h2 class="card-title">Bonjour {{ user.nom }} {{ user.prenom }} </h2>
-                    <p class="card-text">A partir de cet espace vous pouvez : </p>
+                <div class="card-title"><h2 class="text-center display-4 mb-4">Bonjour {{ user.nom }} {{ user.prenom }}</h2></div>
+                    <p class="lead">A partir de cet espace vous pouvez : </p>
                      <div class="list-group list-group-flush">
                         <div class="list-group-item list-group-item-action">
                                 <form id="getCalendar"   name="getCalendar" method="post" action="{{ path_for('calendar.general') }}">
                                     <div class="form-row">
-                                        <div class="form-group col-md-6"><label>Mettre à jour votre calendrier</label></div>
-                                        <div class="form-group col-md-2">
+                                        <div class="form-group col-md-6"><label><i class="far fa-calendar-check"></i> Mettre à jour votre calendrier</label></div>
+                                        <div class="form-group col-md-2 mb-sm-2 mb-md-0">
 
                                             <select name="selMois" id="selMois" class="form-control form-control-sm ">
                                                 {% for key,mois in form_calendar.month_listing %}
@@ -21,14 +20,14 @@
                                                 {% endfor %}
                                             </select>
                                         </div>
-                                       <div class="form-group col-md-2">
+                                       <div class="form-group col-md-2 mb-sm-2 mb-md-0">
                                             <select name="selAnnee" id="selAnnee" class="form-control  form-control-sm">
                                                 {% for key,annee in form_calendar.year_listing %}
                                                 <option value="{{ key }}" {% if key is same as(form_calendar.current_year) %} selected="selected" {% endif %}> {{ annee }}</option>
                                                 {% endfor %}
                                             </select>
                                         </div>
-                                        <div class="form-group col-md-2">
+                                        <div class="form-group col-md-2 text-sm-right text-md-left">
                                             <button class="btn btn-dark btn-sm" type="submit"><i class="far fa-calendar-alt fa-lg"></i>&nbsp;Mettre à jour</button>
                                         </div>
                                     </div>
@@ -38,8 +37,8 @@
                         <div class="list-group-item list-group-item-action">
                                 <form id="getCalendarfoAll" name="getCalendarfoAll" method="post" action="{{ path_for('calendar.forall') }}">
                                     <div class="form-row">
-                                        <div class="form-group col-md-6"><label>Voir le calendrier Global</label></div>
-                                        <div class="form-group col-md-2">
+                                        <div class="form-group col-md-6"><label><i class="far fa-calendar-alt"></i> Voir le calendrier Global</label></div>
+                                        <div class="form-group col-md-2 mb-sm-2 mb-md-0">
 
                                             <select name="selMois" id="selMois" class="form-control form-control-sm ">
                                                 {% for key,mois in form_calendar.month_listing %}
@@ -47,14 +46,14 @@
                                                 {% endfor %}
                                             </select>
                                         </div>
-                                       <div class="form-group col-md-2">
+                                       <div class="form-group col-md-2 mb-sm-2 mb-md-0">
                                             <select name="selAnnee" id="selAnnee" class="form-control  form-control-sm">
                                                 {% for key,annee in form_calendar.year_listing %}
                                                 <option value="{{ key }}" {% if key is same as(form_calendar.current_year) %} selected="selected" {% endif %}> {{ annee }}</option>
                                                 {% endfor %}
                                             </select>
                                         </div>
-                                        <div class="form-group col-md-2">
+                                        <div class="form-group col-md-2 text-sm-right text-md-left">
                                             <button class="btn btn-dark btn-sm" type="submit"><i class="far fa-calendar-check fa-lg" aria-hidden="true"></i>&nbsp;Voir</button>
                                         </div>
                                     </div>
@@ -69,39 +68,46 @@
                 </div>
               </div>
             </div>
-
         {% else %}
-            <h1 class="display-4 text-center mb-4">{{ application.name }}</h1>
-             <div class="row">
-                <div class="col-md-6 offset-md-3">
-                    <div class="card ">
-                        <div class="card-body">
-                        <div class="card-title"><h2>Se connecter</h2></div>
-                            <form action="{{ path_for('auth.signin') }}" method="post">
-                                <div class="form-group{{ errors.email ? ' has-error' : '' }}">
-                                    <label for="email">Email</label>
-                                    <input type="email" name="email" id="email" placeholder="email@domaine.com" class="form-control" value="{{ old.email }}">
-                                    {% if errors.email %}
-                                    <span class="hel-block">{{ errors.email | first }}</span>
-                                    {% endif %}
-                                </div>
-
-                                <div class="form-group{{ errors.password ? ' has-error' : '' }}">
-                                    <label for="password">Password</label>
-                                    <input type="password" name="password" id="password" class="form-control">
-                                    {% if errors.password %}
-                                    <span class="hel-block">{{ errors.password | first }}</span>
-                                    {% endif %}
-                                </div>
-                                <button type="submit" class="btn btn-default">Sign In</button>
-                                {# {{ pwd }} #}
-                                {{ csrf.field | raw }}
-                            </form>
+            <h1 class="display-3 text-center mb-4">{{ application.name }}</h1>
+            <div class="card border-0">
+                <div class="row d-flex">
+                    <div class="col-md-5 offset-md-1 col-sm-4 offset-sm-4">
+                         <div class="card d-sm-none d-md-block border-0">
+                            <div class="card-body p-0">
+                                <div class="row justify-content-center align-middle border-line"> <img src="/assets/img/carpool.svg" class="img-fluid rounded image"> </div>
+                            </div>
                         </div>
+                    </div>
+                    <div class="col-md-5">
+
+                            <div class="card px-4 py-5">
+                                <div class="card-body">
+                                    <div class="card-title"><h2 class="text-center display-4 mb-4">Se connecter</h2></div>
+                                    <form action="{{ path_for('auth.signin') }}" method="post">
+                                        <div class="form-group{{ errors.email ? ' has-error' : '' }}">
+                                            <label for="email">Email</label>
+                                            <input type="email" name="email" id="email" placeholder="email@domaine.com" class="form-control" value="{{ old.email }}">
+                                            {% if errors.email %}
+                                            <span class="hel-block">{{ errors.email | first }}</span>
+                                            {% endif %}
+                                        </div>
+                                        <div class="form-group{{ errors.password ? ' has-error' : '' }}">
+                                            <label for="password">Password</label>
+                                            <input type="password" name="password" id="password" class="form-control">
+                                            {% if errors.password %}
+                                            <span class="hel-block">{{ errors.password | first }}</span>
+                                            {% endif %}
+                                        </div>
+                                        <button type="submit" class="btn btn-default">Sign In</button>
+                                        {{ csrf.field | raw }}
+                                    </form>
+                                </div>
+                            </div>
+
                     </div>
                 </div>
             </div>
         {% endif %}
-
     </div>
 {% endblock %}
